Add remove smallest

--- a/563cf89eb4747c5fb100001b/package.json
+++ b/563cf89eb4747c5fb100001b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require index"
+    "test": "mocha --require index",
+    "start": "mocha index"
   },
   "author": "",
   "license": "ISC",
